# BookLibrary

./: .gitignore  CMakeLists.txt  main.cpp
.github/scripts/: generate-code-coverage.py
.github/workflows/: build-and-test.yml  generate-code-coverage.yml  remove-outdated-runs.yml
TXT/: borrowedBooks.txt  library.txt  users.txt
include/: Admin.h  Book.h  IBookManager.h  Logger.h  Reader.h  User.h
source/: Admin.cpp  Book.cpp  Logger.cpp  Reader.cpp  User.cpp
tests/: AdminTestSuite.cpp  BookTestSuite.cpp  BorrowTestSuite.cpp  BorrowingTestSuite.cpp  CMakeLists.txt  LibrarianTestSuite.cpp  LoggerTestSuite.cpp  ReaderTestSuite.cpp  UserTestSuite.cpp  UsersDataTestSuite.cpp  testUser.cpp
tests/data/: AvailableBook.txt  BorrowedBookTemp.txt  NotAvailableBook.txt  Users.txt  trash.cpp
users/include/: Admin.h  Librarian.h  Reader.h  User.h  UsersData.h
users/source/: Admin.cpp  Librarian.cpp  Reader.cpp  User.cpp  UsersData.cpp
